syntax = "proto3";

package metrics;


option go_package = "metrics/proto";

message MetricGauge {
  string id = 1;
  double value = 2;
}

message  MetricCounter {
  string id = 1;
  int64 delta = 2;
}

message Metric {
  oneof metric {
    MetricGauge gauge = 1;
    MetricCounter counter = 2;
  }
}

message UpdateMetricsRequest {
  repeated Metric metrics = 1;
}

message Empty {
}

service Metrics {
  rpc UpdateMetrics(UpdateMetricsRequest) returns (Empty);
}
